--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="#sobre">Sobre</a>
                 <a href="#localizacao">Localização</a>
                 <a href="#contato">Contato</a>
+                <a href="https://web.ucondo.com.br/login.aspx">Área do cliente</a>
             </nav>
             <div class="menu-toggle" id="menu-toggle" aria-label="Abrir menu">
                 <i class="fas fa-bars"></i>
@@ -185,7 +186,7 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-logo">
-                <img src="./img/logo.png" alt="Logo da Alt" width="180">
+                <img src="./img/logo.jpeg" alt="Logo da Alt" width="180">
                 <p>Sua vistoria veicular com segurança e agilidade.</p>
             </div>
             <div class="footer-info">
