--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body>
     <header>
-        <div class="container header-container">
-            <img src="./img/4.png " alt=" Logo da Alt - Gestão de imobiliaria">
+        <div class="container header-container" id="header">
+            <a href="#header"><img src="./img/4.png " alt=" Logo da Alt - Gestão de imobiliaria"></a>
             <nav id="nav">
                 <a href="#servicos">Serviços</a>
                 <a href="#sobre">Sobre</a>
                 <a href="#localizacao">Localização</a>
                 <a href="#contato">Contato</a>
-                <a href="https://web.ucondo.com.br/login.aspx">Área do cliente</a>
+                <a href="https://pt.pornhub.com/">Área do cliente</a>
             </nav>
             <div class="menu-toggle" id="menu-toggle" aria-label="Abrir menu">
                 <i class="fas fa-bars"></i>
@@ -33,16 +33,16 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Alt - Gestão de imobiliaria</h1>
-                <h2>Soluções em gestão de imobiliaria</h2>
+                <h1>Alt - Gestão de Imobiliária</h1>
+                <h2>Soluções em gestão de imobiliária</h2>
                 <p>
-                    Somos uma empresa de vistoria veicular credenciada ao Detran/SC, especializada na emissão de laudos
-                    para transferência de veículos e segunda via de documentos. Contamos com vistoriadores certificados
-                    e credenciados, garantindo segurança, agilidade e conformidade com as normas legais.
+                    A ALT Gestão de Condomínios nasceu com o propósito de modernizar a administração condominial em
+                    Santa Maria - RS. Atuamos com foco em resultados, oferecendo suporte completo ao síndico e atendendo
+                    as necessidades dos condôminos com agilidade e dedicação.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#contato" class="btn">Solicite uma vistoria</a>
-                    <a href="tel:+5549989226703" class="btn btn-secondary">
+                    <a href="./form.html" class="btn">Solicite seu orçamento</a>
+                    <a href="tel:+5555991016243" class="btn btn-secondary">
                         <i class="fas fa-phone"></i> Ligue agora
                     </a>
                 </div>
@@ -56,24 +56,40 @@
             <h2>Nossos Serviços</h2>
             <div class="cards">
                 <div class="card">
-                    <i class="fas fa-car-alt"></i>
-                    <h3>Vistoria para Transferência</h3>
-                    <p>Laudo completo para transferência de veículos, conforme exigência do Detran/SC.</p>
+                    <i class="fa-solid fa-circle-user"></i>
+                    <h3>Consultoria para Síndicos</h3>
+                    <p>Acompanhamento completo para síndicos com suporte jurídico, administrativo e operacional,
+                        garantindo segurança e tranquilidade na gestão.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-wand-magic-sparkles"></i>
+                    <h3>Modernização e Revitalização</h3>
+                    <p>Planejamento e execução de melhorias em condomínios antigos, trazendo mais conforto, segurança e
+                        valorização ao patrimônio.</p>
                 </div>
                 <div class="card">
                     <i class="fas fa-file-contract"></i>
-                    <h3>Vistoria Cautelar</h3>
-                    <p>Documentação detalhada do estado do veículo para fins legais e seguros.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-camera"></i>
-                    <h3>Laudo Fotográfico</h3>
-                    <p>Registro fotográfico completo das condições do veículo.</p>
+                    <h3>Gestão Financeira Transparente</h3>
+                    <p>Controle eficiente das finanças, com prestação de contas clara, acessível e atualizada para todos
+                        os condôminos.</p>
                 </div>
                 <div class="card">
                     <i class="fas fa-user-tie"></i>
                     <h3>Atendimento Personalizado</h3>
-                    <p>Agendamento flexível e atendimento humanizado para sua comodidade.</p>
+                    <p>Equipe dedicada com atendimento humanizado, prontos para resolver demandas com agilidade e
+                        eficiência.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <h3>Assembleias Digitais</h3>
+                    <p>Facilitamos a participação dos condôminos por meio de assembleias online, promovendo inclusão,
+                        comodidade e maior engajamento.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-users"></i>
+                    <h3>Gestão de Conflitos</h3>
+                    <p>Atuação proativa na mediação de conflitos e na prevenção de litígios, com foco em harmonia e
+                        convivência saudável.</p>
                 </div>
             </div>
         </div>
@@ -81,37 +97,37 @@
 
     <section id="sobre" class="section white">
         <div class="container">
-            <h2>Nossa História</h2>
+            <h2>Gestão Transparente, Moderna e Comprometida</h2>
             <div class="sobre-content">
                 <div class="sobre-text">
                     <p>
-                        A Galvão Vistoria nasceu em fevereiro de 2021, na cidade de Galvão/SC, com o propósito de
-                        facilitar
-                        a vida dos moradores do município e da região. Desde então, temos nos dedicado a oferecer um
-                        atendimento de qualidade, com vistoriadores certificados, comprometidos com a segurança e a
-                        legalidade de cada laudo emitido.
-                    </p>
+                        Na nossa empresa, a prioridade é cuidar do seu condomínio com ética, eficiência e total
+                        transparência. Trabalhamos lado a lado com síndicos e moradores para manter a ordem, valorizar o
+                        patrimônio e facilitar o dia a dia de todos.
+
+                        Com tecnologia de ponta, garantimos uma gestão prática: você acompanha tudo em tempo real,
+                        acessa documentos, faz pagamentos e se comunica com agilidade pelos nossos canais digitais.
+
                     <p>
-                        Nossa missão é simplificar o processo de vistoria veicular, oferecendo um serviço ágil,
-                        transparente
-                        e dentro das normas estabelecidas pelo Detran/SC.
+                        Se você busca uma administração séria, acessível e inovadora, fale com a gente. Solicite seu
+                        orçamento agora mesmo!
                     </p>
                     <div class="destaques">
                         <div class="destaque-item">
                             <i class="fas fa-check-circle"></i>
-                            <span>Vistoriadores credenciados</span>
+                            <span>Atendimento Personalizado</span>
                         </div>
                         <div class="destaque-item">
                             <i class="fas fa-check-circle"></i>
-                            <span>Atendimento rápido e eficiente</span>
+                            <span>Gestão de Conflitos</span>
                         </div>
                         <div class="destaque-item">
                             <i class="fas fa-check-circle"></i>
-                            <span>Laudos dentro das normas do Detran</span>
+                            <span>Assembleias Digitais</span>
                         </div>
                     </div>
                 </div>
-                <img src="./img/logo.jpeg" alt="Funcionário da Galvão Vistorias realizando vistoria">
+                <img src="./img/logo.jpeg" alt="logo alt">
             </div>
         </div>
     </section>
@@ -122,22 +138,23 @@
             <div class="localizacao-content">
                 <div class="info-contato">
                     <h3><i class="fas fa-map-marker-alt"></i> Endereço</h3>
-                    <p>R. Francisco Rosa de Lima, Galvão - SC</p>
+                    <p>Alameda Santiago do Chile, 115 - sala 502 - dores, Santa Maria - RS</p>
 
                     <h3><i class="fas fa-clock"></i> Horário de Atendimento</h3>
-                    <p>Segunda a Sexta: 8h às 17:30h</p>
+                    <p>Segunda a Sexta: 09h às 12:00h, 14:00h às 18:00h </p>
                     <p>Sábado: Agendamento</p>
 
                     <h3><i class="fas fa-phone"></i> Contato</h3>
-                    <p><a href="tel:+5549989226703">(55) 99318835</a></p>
-                    <p><a href="mailto:galvaovistoria@gmail.com">galvaovistoria@gmail.com</a></p>
+                    <p><a href="tel:+5549989226703">(55) 99101-6243</a></p>
+                    <p><a
+                            href="mailto:administrativo@altgestaodecondominios.com">administrativo@altgestaodecondominios.com</a>
+                    </p>
                 </div>
                 <div class="maps">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1838.3479596808925!2d-52.691084693869726!3d-26.45484093683962!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e5352b89e6cfc5%3A0xb99f3489dccbd275!2sGalv%C3%A3o%20Vistoria%20Veicular%20LTDA!5e0!3m2!1spt-BR!2sbr!4v1744633981046!5m2!1spt-BR!2sbr"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5767.524288934147!2d-53.793860800000004!3d-29.6928065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x412ab52ca32feaab%3A0x9802f4410f34d1ca!2sAlt%20Gest%C3%A3o%20de%20Condom%C3%ADnios!5e1!3m2!1spt-BR!2sbr!4v1745430242864!5m2!1spt-BR!2sbr"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"
-                        title="Localização da Galvão Vistorias no Google Maps"></iframe>
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -146,7 +163,7 @@
     <section id="contato" class="section white">
         <div class="container">
             <h2>Entre em contato</h2>
-            <form action="https://formspree.io/f/mnnplevd" method="POST" class="contato-form">
+            <form action="https://formspree.io/f/xldbepzn" method="POST" class="contato-form">
                 <div class="form-group">
                     <label for="nome">Nome Completo</label>
                     <input type="text" id="nome" name="nome" placeholder="Seu nome completo" required>
@@ -163,17 +180,18 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="data">Data preferencial</label>
-                        <input type="date" id="data" name="data" required>
+                        <label for="condomínio">condomínio</label>
+                        <input type="text" id="text" name="condomínio" placeholder="Nome do seu condomínio" required>
                     </div>
                     <div class="form-group">
-                        <label for="hora">Horário preferencial</label>
-                        <input type="time" id="hora" name="hora" required>
+                        <label for="Unidade/Apartamento">Unidade/Apartamento</label>
+                        <input type="text" id="text" name="Unidade/Apartamento"
+                            placeholder="Digiti aqui a sua unidade ou numero do Apartamento">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="mensagem">Informações do veículo</label>
-                    <textarea id="mensagem" name="mensagem" placeholder="Marca, modelo, ano e placa do veículo"
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem" name="mensagem" placeholder="Digiti aqui sua mensagem..."
                         rows="4"></textarea>
                 </div>
                 <button type="submit" class="btn">
@@ -187,12 +205,14 @@
         <div class="container footer-content">
             <div class="footer-logo">
                 <img src="./img/logo.jpeg" alt="Logo da Alt" width="180">
-                <p>Sua vistoria veicular com segurança e agilidade.</p>
+                <p>Gestão Transparente, Moderna e Comprometida com Você.</p>
             </div>
             <div class="footer-info">
-                <h3>Galvão Vistorias</h3>
-                <p>Vistoria veicular credenciada ao Detran/SC</p>
-                <p>CNPJ: ° 52.841.769/0001-36</p>
+                <h3>Alt - Gestão de Imobiliária</h3>
+                <p>Soluções modernas para uma gestão segura.</p>
+                <p>CNPJ: ° 48.981.341/0001-11
+
+                </p>
             </div>
             <div class="footer-links">
                 <h3>Links Rápidos</h3>
@@ -206,21 +226,15 @@
             <div class="footer-social">
                 <h3>Redes Sociais</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://wa.me/5549989226703" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                </div>
-                <div class="pagamento-info">
-                    <h3>Formas de Pagamento</h3>
-                    <div class="pagamento-icons">
-                        <i class="fas fa-money-bill-wave" title="Dinheiro"></i>
-                        <i class="fas fa-pix" title="PIX"></i>
-                    </div>
+                    <a href="https://www.instagram.com/alt_gestao/?igsh=a3dwMms3YWFwM2k1&utm_source=qr#"
+                        aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5555991016243&text&type=phone_number&app_absent=0"
+                        aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; <span id="current-year">2024</span> Galvão Vistorias - Todos os direitos reservados.</p>
+            <p>&copy; <span id="current-year">2025</span> Alt Gestão de Imobiliária - Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
