alterando o botão orçamento

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     as necessidades dos condôminos com agilidade e dedicação.
                 </p>
                 <div class="hero-buttons">
-                    <a href="./form.html" class="btn">Solicite seu orçamento</a>
+                    <a href="./form.html" target="_blank" class="btn">Solicite seu orçamento</a>
                     <a href="tel:+5555991016243" class="btn btn-secondary">
                         <i class="fas fa-phone"></i> Ligue agora
                     </a>
@@ -97,7 +97,7 @@
 
     <section id="sobre" class="section white">
         <div class="container">
-            <h2>Gestão Transparente, Moderna e Comprometida</h2>
+            <h2>Gestão Transparente, Moderna e Comprometida.</h2>
             <div class="sobre-content">
                 <div class="sobre-text">
                     <p>
