--- a/form.html
+++ b/form.html
@@ -16,13 +16,17 @@
             <h2>Solicitar Orçamento</h2>
             <form action="https://formspree.io/f/xldbepzn" method="POST" class="contato-form">
                 <div class="form-group">
-                    <label for="nome">Nome Completo</label>
+                    <label for="nome">Nome Completo do Interessado:</label>
                     <input type="text" id="nome" name="nome" placeholder="Seu nome completo" required>
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="telefone">Telefone</label>
+                        <label for="telefone">Cargo/Função no Condomínio:</label>
                         <input type="tel" id="telefone" name="telefone" placeholder="Seu telefone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="telefone">Telefone de Contato: </label>
+                        <input type="telefone" id="telefone" name="telefone" placeholder="Seu telefone" required>
                     </div>
                     <div class="form-group">
                         <label for="email">E-mail </label>
@@ -31,12 +35,13 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="condomínio">condomínio</label>
-                        <input type="text" id="text" name="condomínio" placeholder="Nome do seu condomínio" required>
+                        <label for="Nome do Condomínio:">Nome do Condomínio::</label>
+                        <input type="text" id="text" name="Nome do Condomínio:" placeholder="Nome do Condomínio:"
+                            required>
                     </div>
                     <div class="form-group">
-                        <label for="Unidade/Apartamento">Unidade/Apartamento</label>
-                        <input type="text" id="text" name="Unidade/Apartamento"
+                        <label for="Endereço Completo:">Endereço Completo:</label>
+                        <input type="text" id="text" name="Endereço Completo:"
                             placeholder="Digiti aqui a sua unidade ou numero do Apartamento">
                     </div>
                 </div>
