adicionando a função de abrir em nova aba a área do cliente

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#sobre">Sobre</a>
                 <a href="#localizacao">Localização</a>
                 <a href="#contato">Contato</a>
-                <a href="https://web.ucondo.com.br/login.aspx">Área do cliente</a>
+                <a href="https://web.ucondo.com.br/login.aspx" target="_blank">Área do cliente</a>
             </nav>
             <div class="menu-toggle" id="menu-toggle" aria-label="Abrir menu">
                 <i class="fas fa-bars"></i>
