--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alt - Gestão de imobiliaria</title>
+    <title>Alt - Gestão imobiliaria</title>
     <meta name="description" content="Alt gestão imobiliaria ltda.">
     <link rel="icon" type="image/png" href="./img/logo.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script defer src="script.js"></script>
 </head>
 
@@ -33,10 +34,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Alt - Gestão de Imobiliária</h1>
-                <h2>Soluções em gestão de imobiliária</h2>
+                <h1>Alt Gestão </h1>
+                <h2>Soluções em gestão de condomínios</h2>
                 <p>
-                    A ALT Gestão de Condomínios nasceu com o propósito de modernizar a administração condominial em
+                    A ALT Gestão imobiliaria nasceu com o propósito de modernizar a administração condominial em
                     Santa Maria - RS. Atuamos com foco em resultados, oferecendo suporte completo ao síndico e atendendo
                     as necessidades dos condôminos com agilidade e dedicação.
                 </p>
@@ -195,7 +196,7 @@
                         rows="4"></textarea>
                 </div>
                 <button type="submit" class="btn">
-                    <i class="fas fa-paper-plane"></i> Enviar Agendamento
+                    <i class="fas fa-paper-plane"></i> Enviar Mensagem
                 </button>
             </form>
         </div>
@@ -208,7 +209,7 @@
                 <p>Gestão Transparente, Moderna e Comprometida com Você.</p>
             </div>
             <div class="footer-info">
-                <h3>Alt - Gestão de Imobiliária</h3>
+                <h3>Alt - Gestão imobiliaria </h3>
                 <p>Soluções modernas para uma gestão segura.</p>
                 <p>CNPJ: ° 48.981.341/0001-11
 
@@ -226,17 +227,24 @@
             <div class="footer-social">
                 <h3>Redes Sociais</h3>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/alt_gestao/?igsh=a3dwMms3YWFwM2k1&utm_source=qr#"
+                    <a href="https://www.instagram.com/alt_gestao/?igsh=a3dwMms3YWFwM2k1&utm_source=qr#" target="_blank"
                         aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://api.whatsapp.com/send/?phone=5555991016243&text&type=phone_number&app_absent=0"
-                        aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; <span id="current-year">2025</span> Alt Gestão de Imobiliária - Todos os direitos reservados.</p>
+            <p>&copy; <span id="current-year">2025</span> Alt Gestão - Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <!-- Botão WhatsApp Flutuante -->
+    <div id="whatsapp-button">
+        <a href="https://wa.me/55991016243" target="_blank">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
 </body>
 
 </html>
