--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alt - Gestão imobiliaria</title>
+    <title>Alt Gestão de Condomínios</title>
     <meta name="description" content="Alt gestão imobiliaria ltda.">
     <link rel="icon" type="image/png" href="./img/logo.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
